@@ -6,12 +6,17 @@ import com.jcs.javacommunitysite.atproto.records.AtprotoRecord;
 import com.jcs.javacommunitysite.atproto.session.AtprotoAuthSession;
 import dev.mccue.json.Json;
 import dev.mccue.json.JsonObject;
-
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
-
+import java.util.stream.Collectors;
 import static dev.mccue.json.JsonDecoder.field;
 import static dev.mccue.json.JsonDecoder.string;
 
@@ -25,6 +30,8 @@ public class AtprotoClient {
     public void setAuthenticatedSession(AtprotoAuthSession session) {
         this.session = session;
     }
+    
+    
 
     public Json createRecord(AtprotoRecord record) throws AtprotoInvalidRecord, AtprotoUnauthorized, IOException {
         JsonObject.Builder payload = JsonObject.builder();
@@ -32,7 +39,8 @@ public class AtprotoClient {
         payload.put("repo", session.getHandle());
         payload.put("collection", record.getRecordCollection());
 
-        URL url = new URL(new URL(session.getPdsHost()), "/xrpc/com.atproto.repo.createRecord");
+        URI uri = URI.create(session.getPdsHost()).resolve("/xrpc/com.atproto.repo.createRecord");
+        URL url = uri.toURL();
 
         Map<String, String> headers = new HashMap<>();
         headers.putAll(session.getAuthHeaders());
@@ -49,14 +57,22 @@ public class AtprotoClient {
     }
 
     public Json updateRecord(AtprotoRecord record) throws AtprotoInvalidRecord, AtprotoUnauthorized, IOException {
-        if (record.getOwnerDid().isPresent() && !record.getOwnerDid().orElseThrow().equals(session.getHandle())) throw new AtprotoUnauthorized();
+
+        String handle = session.getHandle(); 
+        String handleDid = resolveDidFromHandle(handle);
+
+        if ((record.getOwnerDid().isPresent() && record.getOwnerDid().orElseThrow().equals(handleDid)) == false) {
+            throw new AtprotoUnauthorized();
+        }
+
         JsonObject.Builder payload = JsonObject.builder();
-        payload.put("record", record);
+        payload.put("record", record.toJson());
         payload.put("repo", session.getHandle());
         payload.put("collection", record.getRecordCollection());
         payload.put("rkey", record.getRecordKey().orElseThrow());
 
-        URL url = new URL(new URL(session.getPdsHost()), "/xrpc/com.atproto.repo.putRecord");
+        URI uri = URI.create(session.getPdsHost()).resolve("/xrpc/com.atproto.repo.putRecord");
+        URL url = uri.toURL();
 
         Map<String, String> headers = new HashMap<>();
         headers.putAll(session.getAuthHeaders());
@@ -66,18 +82,56 @@ public class AtprotoClient {
     }
 
     public Json deleteRecord(AtprotoRecord record) throws AtprotoInvalidRecord, AtprotoUnauthorized, IOException {
-        if (record.getOwnerDid().isPresent() && !record.getOwnerDid().orElseThrow().equals(session.getHandle())) throw new AtprotoUnauthorized();
+        String handle = session.getHandle(); 
+        String handleDid = resolveDidFromHandle(handle);
+
+        if ((record.getOwnerDid().isPresent() && record.getOwnerDid().orElseThrow().equals(handleDid)) == false) {
+            throw new AtprotoUnauthorized();
+        }
+
         JsonObject.Builder payload = JsonObject.builder();
         payload.put("repo", session.getHandle());
         payload.put("collection", record.getRecordCollection());
         payload.put("rkey", record.getRecordKey().orElseThrow());
 
-        URL url = new URL(new URL(session.getPdsHost()), "/xrpc/com.atproto.repo.deleteRecord");
+        URI uri = URI.create(session.getPdsHost()).resolve("/xrpc/com.atproto.repo.deleteRecord");
+        URL url = uri.toURL();
 
         Map<String, String> headers = new HashMap<>();
         headers.putAll(session.getAuthHeaders());
 
         Json response = HttpUtil.post(url, payload.build(), headers);
         return response;
+    }
+
+    String resolveDidFromHandle(String handle) throws IOException {
+        URI uri = URI.create("https://bsky.social").resolve("/xrpc/com.atproto.identity.resolveHandle?handle=" + URLEncoder.encode(handle, StandardCharsets.UTF_8));
+
+        // Open connection
+        HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
+        conn.setRequestMethod("GET");
+
+        // Read response
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
+            String response = reader.lines().collect(Collectors.joining());
+            JsonObject json = (JsonObject) Json.readString(response);
+            return field(json, "did", string());
+        }
+    }
+
+    public AtprotoAuthSession getSession() {
+        return session;
+    }
+
+    public boolean isSameUser(String didOrHandle) throws IOException {
+        String did = didOrHandle;
+        if (!didOrHandle.startsWith("did:")) {
+            resolveDidFromHandle(didOrHandle);
+        }
+
+        String sessionDid = resolveDidFromHandle(session.getHandle());
+
+        return did.equals(sessionDid);
+
     }
 }
